tests/errors/cpp_err4.f90
program cpp_err4
#include "does_not_exist.inc"
print *, 'OK'
end program
